--- a/src/About.scss
+++ b/src/About.scss
@@ -1,8 +1,5 @@
-div{
-    p{
-        font-size: 1.5rem;
-        text-align: center;
-        padding: 1rem;
-        
-    }
+.p-about {
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 1rem;
 }
